added some style

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
     <nav>
         <div class="container">
             <div class="navContent">
-                <a href="#">Navber</a>
+                <a class="logo" href="#">Navber</a>
                 <ul class="navList">
                     <li><a href="Home">Home</a></li>
-                    <li><a href="Home">Home</a></li>
-                    <li><a href="Home">Home</a></li>
-                    <li><a href="Home">Home</a></li>
-                    <li><a href="Home">Home</a></li>
+                    <li><a href="About">About</a></li>
+                    <li><a href="Work">Work</a></li>
+                    <li><a href="Service">Service</a></li>
+                    <li><a href="Contact">Contact</a></li>
                 </ul>
                 <ul class="icons">
                     <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
@@ -93,12 +93,12 @@
                 <button class="bar"> &#61;</button>
             </div>
             <div class="links">
-                <ul>
+                <ul class="linksItem">
                     <li><a href="Home">Home</a></li>
-                    <li><a href="Home">Home</a></li>
-                    <li><a href="Home">Home</a></li>
-                    <li><a href="Home">Home</a></li>
-                    <li><a href="Home">Home</a></li>
+                    <li><a href="About">About</a></li>
+                    <li><a href="Work">Work</a></li>
+                    <li><a href="Service">Service</a></li>
+                    <li><a href="Contact">Contact</a></li>
                 </ul>
             </div>
         </div>
